--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   http: ^0.12.2
   lottie: ^0.6.0
   google_fonts: ^1.1.0
+  flutter_local_notifications: ^1.4.2
+
 
 dev_dependencies:
   flutter_test:
